appP5eLearning/force-app/main/default/objects/Progress_Trail_Per_Module__c/Progress_Trail_Per_Module__c.object-meta.xml
<CustomObject>
    <label>Progress Trail Per Module</label>
    <nameField>
        <displayFormat>PT-{00000}</displayFormat>
        <label>Progress Trail Per Module Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Progresses Trail Per Modules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>