appP5eLearning/force-app/main/default/objects/Progress_Trail_Per_Module__c/fields/Completed_Modules__c.field-meta.xml
<CustomField>
    <fullName>Completed_Modules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Modules</label>
    <type>Checkbox</type>
</CustomField>