appP5eLearning/force-app/main/default/objects/Progress_Trail_Per_Module__c/fields/Progress_Trail_Per_Module__c.field-meta.xml
<CustomField>
    <fullName>Progress_Trail_Per_Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Progress Trail Per Module</label>
    <referenceTo>Progress_Module_Per_Unit__c</referenceTo>
    <relationshipLabel>Progresses Trail Per Modules</relationshipLabel>
    <relationshipName>Progresses_Trail_Per_Modules</relationshipName>
    <type>Lookup</type>
</CustomField>