appP5eLearning/force-app/main/default/objects/Progress_Trail_Per_Module__c/fields/Time_Total__c.field-meta.xml
<CustomField>
    <fullName>Time_Total__c</fullName>
    <label>Time Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>