appP5eLearning/force-app/main/default/objects/Progress_Trail_Per_Module__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Progresses Trail Per Modules</relationshipLabel>
    <relationshipName>Progresses_Trail_Per_Modules</relationshipName>
    <type>Lookup</type>
</CustomField>