appP5eLearning/force-app/main/default/objects/Progress_Trail_Per_Module__c/validationRules/Inactive_Module.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Module</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Module__r.Active__c)</errorConditionFormula>
    <errorMessage>Trails cannot have inactive modules</errorMessage>
</ValidationRule>